testfx/errors/error_tests/err_09_multiline_context.fx
// 测试9: 混合错误 - 多行上下文
a := 10
b := 20
c := a + 
d := 40
